--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -3,8 +3,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 /* Mobile first */
@@ -52,6 +52,21 @@ form {
   color: #fff;
 }
 
+.output {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 1.1em;
+}
+
+.context-element {
+  width: 50%;
+  background-color: #64ed6d;
+  border-radius: 15px;
+  padding: 2vh;
+  margin-top: 1%;
+}
+
 /* Tablet */
 @media screen and (min-width: 768px) {
   .headline {
@@ -60,6 +75,13 @@ form {
 
   #search,
   #submit-btn {
+    font-size: 2em;
+  }
+
+  .output {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     font-size: 2em;
   }
 }
