--- a/Task 3/style.css
+++ b/Task 3/style.css
@@ -59,3 +59,17 @@
   border-radius: 5px;
   background-color: #fff;
 }
+
+.image {
+  width: 100%;
+  height: 100%;
+  margin-top: 1%;
+}
+
+.login {
+  margin-top: 3%;
+  padding: 1%;
+  text-align: center;
+  color: whitesmoke;
+  background-color: darkorange;
+}
